modified:   config.xml 	modified:   css/animations.css 	modified:   css/style.css 	modified:   img/Thumbs.db 	modified:   img/logo.png 	modified:   js/index.js 	modified:   res/icons/android/artwork.png 	modified:   res/icons/android/icon-144-xxhdpi.png 	modified:   res/icons/android/icon-192-xxxhdpi.png 	modified:   res/icons/android/icon-36-ldpi.png 	modified:   res/icons/android/icon-48-mdpi.png 	modified:   res/icons/android/icon-72-hdpi.png 	modified:   res/icons/android/icon-96-xhdpi.png 	renamed:    res/icons/ios/icon-29.png -> res/icons/ios/AppIcon29x29.png 	new file:   res/icons/ios/AppIcon29x29@2x.png 	renamed:    res/icons/ios/icon-40.png -> res/icons/ios/AppIcon40x40.png 	new file:   res/icons/ios/AppIcon40x40@2x.png 	renamed:    res/icons/ios/icon-50.png -> res/icons/ios/AppIcon50x50.png 	new file:   res/icons/ios/AppIcon50x50@2x.png 	renamed:    res/icons/ios/icon-57.png -> res/icons/ios/AppIcon57x57.png 	new file:   res/icons/ios/AppIcon57x57@2x.png 	renamed:    res/icons/ios/icon-60.png -> res/icons/ios/AppIcon60x60.png 	new file:   res/icons/ios/AppIcon60x60@2x.png 	new file:   res/icons/ios/AppIcon72x72.png 	new file:   res/icons/ios/AppIcon72x72@2x.png 	new file:   res/icons/ios/AppIcon76x76.png 	new file:   res/icons/ios/AppIcon76x76@2x.png 	new file:   res/icons/ios/Thumbs.db 	modified:   res/icons/ios/iTunesArtwork.png 	modified:   res/icons/ios/iTunesArtwork@2x.png 	deleted:    res/icons/ios/icon-29-2x.png 	deleted:    res/icons/ios/icon-40-2x.png 	deleted:    res/icons/ios/icon-50-2x.png 	deleted:    res/icons/ios/icon-57-2x.png 	deleted:    res/icons/ios/icon-60-2x.png 	deleted:    res/icons/ios/icon-72-2x.png 	deleted:    res/icons/ios/icon-72.png 	deleted:    res/icons/ios/icon-76-2x.png 	deleted:    res/icons/ios/icon-76.png

--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,7 @@ body, html {
     padding: 0;
 }
 .background {
-    background: url("../img/background.png") repeat-x fixed center center #ffffff;
-    background-size: cover;
+    background: #272727;
     height: 100%;
     left: 0;
     position: absolute;
@@ -57,14 +56,14 @@ body, html {
 #main_message {
     color: #fff;
     font-family: Roboto,sans-serif;
-    font-size: 30pt;
+    font-size: 22pt;
     font-weight: normal;
     margin: 10px 15px 15px;
 }
 #sub_message {
     color: #fff;
     font-family: Roboto, sans-serif;
-    font-size: 18pt;
+    font-size: 14pt;
 }
 .spinner {
     height: 30px;
@@ -75,7 +74,7 @@ body, html {
 .container1 > div, .container2 > div, .container3 > div {
     width: 6px;
     height: 6px;
-    background-color: #e8a2b5;
+    background-color: #fff;
     border-radius: 100%;
     position: absolute;
     -webkit-animation: bouncedelay 1.2s infinite ease-in-out;
